# rustdecks

./: CLAUDE.md  Cargo.toml  README.md  THIRD-PARTY-NOTICES.md  architecture.md
.cargo/: config.toml
assets/fonts/: OFL.txt
examples/: cessna-172.yaml  cessna.yaml  cirrus-sr22.yaml  demo.yaml  hero.rs  preview.rs
src/: app.rs  config.rs  device.rs  lib.rs  main.rs  mirror.rs  render.rs  sim.rs  tui.rs
