[package]
name = "rustdecks"
version = "0.1.0"
edition = "2021"
description = "Lean Loupedeck Live controller for X-Plane 12"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serialport = "4"
fontdue = "0.9"
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["json"] }
tungstenite = { version = "0.21", default-features = false, features = ["handshake"] }

[dev-dependencies]
# Examples only (preview rendering to PNG); not in the shipped binary.
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true
